Added: NewTaskFragment.java to create a new task. Updated: TaskListFragment.java - open NewTaskFragment or return to TodayPageActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="save_btn">Save</string>
     <string name="job_title">Job Title</string>
     <string name="user_name">User Name</string>
+    <string name="pick_date">PICK DATE</string>
+    <string name="date">Date</string>
+    <string name="user">User</string>
+    <string name="write_your_task_here">Write your task here</string>
+    <string name="cancel">CANCEL</string>
 </resources>
